# drf-rior

./: .gitignore  pyproject.toml  runtests.py
drf_rior/: exceptions.py  generics.py  mixins.py  schema.py  utils.py  views.py
