[tool.poetry]
name = "drf-rior"
version = "0.1.0"
description = ""
authors = ["Gustavo Lozada <gu.lozada9@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "drf_rior"}]

[tool.poetry.dependencies]
python = "^3.11"
djangorestframework = "^3.14.0"
drf-spectacular = "^0.26.4"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.test_settings"
addopts = "-p no:warnings"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
ruff = "^0.6.1"
pytest-django = "^4.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
